@@ -4,6 +4,7 @@ import lombok.extern.apachecommons.CommonsLog;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 
 @CommonsLog
@@ -13,7 +14,7 @@ public class SplitURL {
     public static ArrayList<String> split(String urlencoded) throws UnsupportedEncodingException {
         log.info("Got request " + urlencoded);
         ArrayList<String> Result = new ArrayList<>();
-        String urldecoded = URLDecoder.decode(urlencoded, "UTF-8");
+        String urldecoded = URLDecoder.decode(urlencoded, StandardCharsets.UTF_8);
         String[] info = urldecoded.split("&");
         for (int i = 0; i < info.length; i++) {
             int index = info[i].indexOf('=');
